--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,7 +1,7 @@
 development:
-  secret_token: "my_secret_token"
-  secret_key_base: "abcdef0123456789"
+  secret_token: <%= ENV['secret_token'] %>
+  secret_key_base: <%= ENV['secret_key_base'] %>
 
 production:
-  secret_token: "my_secret_token"
-  secret_key_base: "abcdef0123456789"
+  secret_token: <%= ENV['secret_token'] %>
+  secret_key_base: <%= ENV['secret_key_base'] %>
