--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -5,3 +5,7 @@ development:
 production:
   secret_token: <%= ENV['secret_token'] %>
   secret_key_base: <%= ENV['secret_key_base'] %>
+
+test:
+  secret_token: <%= ENV['secret_token'] %>
+  secret_key_base: <%= ENV['secret_key_base'] %>
